--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body{
     padding: 0;
     margin: 0;
     height: 100vh;
+    width: 100vw;
     align-items: center;
     justify-content: center;
     background: url(images/pattern-background-desktop.svg);
@@ -11,6 +12,9 @@ body{
     background-size: 100%;
     background-color: hsl(225, 100%, 94%);
     font-family: 'Red Hat Display', sans-serif;
+}
+img{
+    width: 100%;
 }
 .main{
     width: 400px;
@@ -99,4 +103,24 @@ h2,h4{
 }
 h2{
     font-weight: 900;
+}
+@media(max-width:500px) {
+    .main{
+        display: flex;
+        flex-direction: column;
+        width: 90%;
+        margin-left: 20px;
+    }
+    button{
+        width: 90%;
+    }
+    .content{
+        width: 90%;
+    }
+    #body{
+        padding: 20px;
+    }
+    p{
+        width: 100%;
+    }
 }
