--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ button{
     font-family: 'Red Hat Display', sans-serif;
     margin-top: 25px;
     font-weight: 900;
+    border:none;
 }
 button:hover{
     background-color:hsl(245, 75%, 52%,0.7);
@@ -108,8 +109,8 @@ h2{
     .main{
         display: flex;
         flex-direction: column;
-        width: 90%;
-        margin-left: 20px;
+        width: 80%;
+        margin: auto;
     }
     button{
         width: 90%;
